--- a/web-developer.html
+++ b/web-developer.html
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698116139-senior-web-developer-m-f-'>Ubisoft Senior Web Developer (M/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698116139-senior-web-developer-m-f-'>Ubisoft Senior Web Developer (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bordeaux France  Bordeaux</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -249,7 +249,7 @@
 <p>3 days ago ... STAT (www.statnews.com) is a cutting-edge media company that is committed to 
 finding and telling compelling stories about health, medicine, and scientific?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/obYWafwZ'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/obYWafwZ'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -291,7 +291,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=feed'>
+<h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=feed'>
       Senior Web Developer at Persado - San Franciso, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -339,11 +339,11 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Vancouver, BC</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://uth.referrals.selectminds.com/jobs/web-developer-iv-wordpress-expert-in-communications-houston-tx-6180'>Web Developer IV / WordPress Expert in Communications - Houston, TX - UTHealth Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uth.referrals.selectminds.com/jobs/web-developer-iv-wordpress-expert-in-communications-houston-tx-6180'>Web Developer IV / WordPress Expert in Communications - Houston, TX - UTHealth Careers</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -409,7 +409,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Toronto, Ontario  Richmond Toronto</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/59kpg9zdm39316y9khb55jsx6h'>Front-End Web Developer | Knak Digital</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/59kpg9zdm39316y9khb55jsx6h'>Front-End Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -449,7 +449,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">New York  New York City</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Conga1/743999697896876-web-developer-back-end-'>Conga Web Developer (Back-end) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Conga1/743999697896876-web-developer-back-end-'>Conga Web Developer (Back-end) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Broomfield, CO</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
