--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce/apply?lever-origin=applied&lever-source[0]=BuiltInColorado'>Gloo - Information Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce/apply?lever-origin=applied&lever-source[0]=BuiltInColorado'>Gloo - Information Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Information Privacy Analyst. Boulder, CO. Administration. Full-time. Submit your 
 application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -84,7 +84,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
+<h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Privacy and Compliance Analyst at Formstack in (Multiple states).</p>
 <hr/>
@@ -166,11 +166,11 @@ experience?...</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
-<h5><a href='https://www.dataprivacycareers.com/jobs/18037838-privacy-and-information-practices-analyst-at-university-of-california?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Information Practices Analyst  Job at  University of California in Santa Cruz, California | DataPrivacyCareers.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.dataprivacycareers.com/jobs/18037838-privacy-and-information-practices-analyst-at-university-of-california?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Information Practices Analyst  Job at  University of California in Santa Cruz, California | DataPrivacyCareers.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
@@ -188,7 +188,7 @@ trust?...</p>
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verder.recruitee.com/o/cyber-security-privacy-specialist-vleuten'>
+<h5><a href='https://verder.recruitee.com/o/cyber-security-privacy-specialist-vleuten'>
       Cyber Security & Privacy Specialist - Verder
     </a></h5> 
 <p><span class="badge badge-light">Vleuten, Netherlands</span></p>
@@ -244,7 +244,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Sr. Differential Privacy Research Engineer, Mozilla Corporation, Mountain View, 
 CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...</p>
@@ -253,7 +253,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nR7GfLw9'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nR7GfLw9'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-17</p>
 <hr/>
@@ -270,7 +270,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-04</p>
 <hr/>
-<h5><a href='https://greenzone-solutions-inc.workable.com/j/01AE9E53CE'>GreenZone Solutions, Inc. - Jobs: Privacy Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenzone-solutions-inc.workable.com/j/01AE9E53CE'>GreenZone Solutions, Inc. - Jobs: Privacy Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -278,7 +278,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
+<h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -290,7 +290,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -346,7 +346,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-03</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
@@ -401,11 +401,11 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -441,7 +441,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 18, 2019 ... Description. The Company. RingCentral, Inc. (NYSE:RNG) is a leading provider 
 of global enterprise cloud communications and collaboration solutions.</p>
