--- a/ui.html
+++ b/ui.html
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -182,7 +182,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/react/jobs/8425-senior-ui-engineer'>
+<h5><a href='https://www.42jobs.io/react/jobs/8425-senior-ui-engineer'>
 Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 
 </a></h5> 
@@ -235,7 +235,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ongoing.join.com/jobs/463683-web-developer-frontend-ui-ux-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN</a></h5> 
+<h5><a href='https://ongoing.join.com/jobs/463683-web-developer-frontend-ui-ux-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -297,7 +297,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qG0aVfwv&k=Job&j=ospr7fw9&__jvst=Employee&__jvsd=skN7jiwk&__jvsc=Twitter&bid=nB3mlMwC'>Playground Games Careers - Lead UI Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qG0aVfwv&k=Job&j=ospr7fw9&__jvst=Employee&__jvsd=skN7jiwk&__jvsc=Twitter&bid=nB3mlMwC'>Playground Games Careers - Lead UI Engineer</a></h5> 
 <p><span class="badge badge-light">Leamington Spa, Warwickshire</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -333,7 +333,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19463-Senior-UI-UX-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/19463-Senior-UI-UX-Designer?source=twitter'>
       Senior UI/UX Designer at Optimize.Ad - Austin, TX - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
@@ -391,7 +391,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5587/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5587/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -403,7 +403,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5590/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5590/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -415,7 +415,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/physician-assistant-weo-urgent-care-5589'>Physician Assistant-WEO Urgent Care - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/physician-assistant-weo-urgent-care-5589'>Physician Assistant-WEO Urgent Care - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
